--- a/source/_sass/_callout.scss
+++ b/source/_sass/_callout.scss
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: rgba(black, .8);
 
-  h2 { 
+  h2 {
     font-size: 1.6rem;
     font-weight: 400;
     margin-bottom: 10px;
@@ -13,8 +13,8 @@
 
   p {
     font-size:  1.5rem;
-    font-weight: 300; 
-    margin-top: 0;
+    font-weight: 300;
+    margin-top: 40px;
     color: rgba(white, .5);
     margin-bottom: 40px;
     line-height: 1.3;
