--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -8,6 +8,7 @@
       <a href="{{ '/events.html' | relative_url }}">Events</a>
       <a href="#">Current Projects</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
+      <a href="{{ '/team.html' | relative_url }}">Team</a>
     </nav>
      <a class="top-bar__logo" href="/"><img src="/images/govlab-logo-white.png" alt="The GovLab"></a>
 
