--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -44,6 +44,7 @@
     <script src="/js/{{ page.custom_js }}"></script>
     {% endif %}
 <!-- fullPage scripts -->
+    <script src="/scripts/fullpage.scrollHorizontally.min.js"></script>
     <script src="/scripts/jquery.fullPage.js"></script>
     <script src="/scripts/scrolloverflow.min.js"></script>
     <script src="/scripts/jquery.fullpage.extensions.min.js"></script>
