--- a/source/_sass/_team.scss
+++ b/source/_sass/_team.scss
@@ -1,40 +1,41 @@
-.card-team {
-  max-height: 100%;
+.team-page {
 
-  &__content {
+  &__member {
+    border-bottom: 1px rgba(black, .2) solid;
+  }
+
+  &__image {
+    border-radius: 50%;
+    height: 220px;
+    width: 220px;
+    margin: 30px 20px;
     background-size: cover;
-    padding-top: 100%;
+    background-repeat: no-repeat;
     background-position: center;
-    color: white;
-    position: relative;
   }
 
-  &__info {
-    background-color: rgba(0,0,0,0.6);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  &__bio {
+    h3 {
+      font-weight: 600;
+      font-size: 1.5rem;
+      margin-bottom: -5px;
+    }
+
+    h5 {
+      font-weight: 400;
+      text-transform: uppercase;
+      color: rgba(0, 0, 0, 0.5);
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+      margin-top: 0;
+    }
+
+    p {
+      color: rgba(0, 0, 0, 0.8);
+      margin: 0;
+      margin-bottom: 20px;
+    }
   }
 
-  h1, h2, h3 { margin: 0; }
 
-  h1 {
-    font-weight: bold;
-    font-size: 1rem;
-    padding: 5% 20px 0;
-    text-transform: uppercase;
-  }
-
-  h2 {
-    font-size: 1rem;
-    padding: 0 20px;
-    text-transform: none;
-  }
-
-  h3 {
-    font-size: 1rem;
-    padding: 0 20px 10px;
-    text-transform: none;
-  }
 }
