--- a/source/_sass/_introduction.scss
+++ b/source/_sass/_introduction.scss
@@ -7,15 +7,16 @@
   #download-container {
     // adds download button on top of first slide
     background-color: transparent;
+    text-align: right;
     position: fixed;
     bottom: 0;
     width: 100%;
     z-index: 10;
-    text-align: right;
     .button {
+      background-color: rgba($gray, .5);
       color: white;
       &:hover {
-        background-color: rgba($main-color, .5);
+        background-color: rgba($main-color, .8);
         transition: all .4s ease;
       }
     }
@@ -25,18 +26,17 @@
     #slide-instructions {
       // adds instructions below horizontal slides
       text-align: center;
+      position: absolute;
+      background-color: rgba(black, .8);
+      left:0;
+      right:0;
       p {
         color: $main-color;
         text-transform: uppercase;
-      }
-      @media (min-width: 1100px) {
-        bottom: 5vh;
-        position: absolute;
-        width: 100%;
-        background-color: rgba(black, .8);
+        padding: 10px;
       }
       @media (min-width: 1200px) {
-        bottom: 8vh;
+        bottom: 20vh;
         position: absolute;
         width: 100%;
       }
@@ -73,15 +73,15 @@
 }
 
 .fp-controlArrow.fp-prev {
-    left: 15px;
+    left: 25px;
     width: 0;
     border-width: 38.5px 34px 38.5px 0;
-    border-color: transparent rgba($gray, 0.3) transparent transparent !important;
+    border-color: transparent rgba(black, 0.3) transparent transparent !important;
 }
 .fp-controlArrow.fp-next {
-    right: 15px;
+    right: 25px;
     border-width: 38.5px 0 38.5px 34px;
-    border-color: transparent transparent transparent rgba($gray, 0.3) !important;
+    border-color: transparent transparent transparent rgba(black, 0.3) !important;
 }
 
 .fp-tooltip {
