--- a/source/_sass/_team.scss
+++ b/source/_sass/_team.scss
@@ -1,5 +1,4 @@
 .team-page {
-
   &__member {
     border-bottom: 1px rgba(black, .1) solid;
     &--last {
@@ -15,6 +14,13 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    @include breakpoint($small-only) {
+      margin-left: 80px;
+      margin-bottom: 5px;
+      margin-top: 30px;
+      height: 180px;
+      width: 180px;
+    }
   }
 
   &__bio {
@@ -39,6 +45,4 @@
       margin-bottom: 30px;
     }
   }
-
-
 }
