--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -10,12 +10,13 @@
 
       <nav class="footer__nav footer__panel">
         <a href="{{ '/introduction.html' | relative_url }}">What is Data Collaboratives</a>
-        <a href="{{ '/cases.html' | relative_url }}">Data Collaboratives Explorer</a>
+        <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
         <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
         <a href="{{ '/static/files/framework.pdf' | relative_url }}">Data Responsibility Framework</a>
         <a href="{{ '/events.html' | relative_url }}">Events</a>
         <a href="#">Improving Children’s Lives through Data Collaboratives</a>
         <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
+        <a href="{{ '/team.html' | relative_url }}">Team</a>
       </nav>
     </div>
     <div class="large-4 column footer__panel--about">
