--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -2,7 +2,7 @@
     <span class="top-bar__button js-trigger-menu">menu</span>
     <nav class="main-menu js-target-menu main-menu--left">
       <a href="{{ '/introduction.html' | relative_url }} ">Introduction</a>
-      <a href="{{ '/cases.html' | relative_url }}">Data Collaboratives Explorer</a>
+      <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
       <a href="{{ '/static/files/framework.pdf' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
