Link current projects to www

--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -6,7 +6,7 @@
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
       <a href="{{ '/static/files/framework.pdf' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
-      <a href="#">Current Projects</a>
+      <a href="http://www.thegovlab.org/project-data-collaboratives-to-improve-childrens-lives.html">Current Projects</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
       <a href="{{ '/team.html' | relative_url }}">Team</a>
     </nav>
