Make canvas columns collapse on small screems

--- a/source/_sass/_canvas.scss
+++ b/source/_sass/_canvas.scss
@@ -13,6 +13,12 @@
       font-size: 2rem;
       text-transform: uppercase;
       font-weight: 300;
+      @include breakpoint($small-only) {
+        font-size: 1.7rem;
+      }
+      @media (max-width: 380px) {
+        font-size: 1rem;
+      }
 
       span {
         display: inline-block;
@@ -86,6 +92,9 @@
   }
 
   &__section-title {
+    @include breakpoint($small-only) {
+      text-align: left;
+    }
     text-align: right;
     margin: 0;
 
