Add footer txt and fix dropdown typo

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -21,7 +21,7 @@
     </div>
     <div class="large-4 column footer__panel--about">
       <div class="footer__text footer__panel footer__panel--about">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium repellendus exercitationem, et ratione minus nihil eaque, a cumque, ad corrupti modi. Suscipit repellendus id, sed nihil illum iusto impedit nam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium repellendus exercitationem, et ratione minus nihil eaque, a cumque, ad corrupti modi. Suscipit repellendus id, sed nihil illum iusto impedit nam.</p>
+        <p>DataCollaboratives.org is a resource on creating public value by exchanging data. In sync with the mission of the <a href="http://www.thegovlab.org/">GovLab</a>, the site seeks to provide insight on how responsible exchange of corporate data can improve people’s lives. It results from different partnerships with UNICEF and Omidyar Network.</p>
       </div>
     </div>
 
