--- a/source/_sass/_canvas.scss
+++ b/source/_sass/_canvas.scss
@@ -72,6 +72,28 @@
   text-align: center;
 }
 
+.phase-next {
+  background-color: $gray;
+  padding: 10px;
+  &-wrapper {
+    text-align: left;
+    a {
+      &:hover {
+        color: $main-color;
+      }
+      text-decoration: none;
+    }
+  }
+  span {
+    text-transform: uppercase;
+    font-size: 17px;
+    font-weight: 600;
+    color: rgba(white, 0.3);
+  }
+  h4 { margin: 0;}
+}
+
+
 .canvas-step {
   &__section {
     margin-top: 40px;
