Add media queries to vid

--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -21,9 +21,19 @@
   }
 
   &--bg {
-    background-position: center;
-    background-size: cover;
+    // background-position: center;
+    // background-size: cover;
     padding: 140px 0;
+    @include breakpoint($small-only) {
+      background-image: url("/images/video/long-img.png");
+    }
+    @include breakpoint($medium) {
+      background-image: url("/images/video/long-img.png");
+    }
+    @include breakpoint($large) {
+      background-color: transparent;
+      // background-image: url("/images/video/long-img.png");
+    }
   }
 
   &--yellow {
