--- a/source/_sass/_callout.scss
+++ b/source/_sass/_callout.scss
@@ -1,6 +1,6 @@
 .callout-message {
   text-align: center;
-  background-color: rgba(black, .8);
+  background-color: #333;
 
   h2 {
     font-size: 1.6rem;
