--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -21,6 +21,7 @@
   }
 
   &--bg {
+    // background-image: url("/images/video/long-img.png");
     // background-position: center;
     // background-size: cover;
     padding: 140px 0;
@@ -31,8 +32,8 @@
       background-image: url("/images/video/long-img.png");
     }
     @include breakpoint($large) {
+      // background-image: none;
       background-color: transparent;
-      // background-image: url("/images/video/long-img.png");
     }
   }
 
