Add event url to modal

--- a/source/_includes/events-modal.html
+++ b/source/_includes/events-modal.html
@@ -16,7 +16,7 @@
     {% if event.url %}
     <div class="floating-button">
       <div class="floating-button__wrapper">
-        <a class="button button--floating button--black" target="_blank" href="{{resource.url}}" title="{{event.url}}">Go to Website</a>
+        <a class="button button--floating button--black" target="_blank" href="{{event.url}}" title="{{event.url}}">Go to Website</a>
       </div>
     </div>
     {% endif %}
