--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -21,7 +21,7 @@
   }
 
   &--bg {
-    // background-image: url("/images/video/long-img.png");
+    background-image: url("/images/video/long-img.png");
     // background-position: center;
     // background-size: cover;
     padding: 140px 0;
