--- a/source/_layouts/case_template.html
+++ b/source/_layouts/case_template.html
@@ -22,7 +22,7 @@ layout: default
         {% endif %}
       </h2>
     </hgroup>
-    <div class="case-page__header--button"><a class="button" href="{{page.link}}">Go to website</a></div>
+    <div class="case-page__header--button"><a target="_blank" class="button" href="{{page.link}}">Go to website</a></div>
   </div>
 
   <div class="page-section case-page--info">
@@ -55,7 +55,8 @@ layout: default
         <div class="share-panel">
           <h5>Shared by</h5>
           {% for item in page.sharedBy %}
-            <a href="#" class="share-panel__item">{{item}}</a>
+            <!-- <a href="#" class="share-panel__item">{{item}}</a> -->
+            <span class="share-panel__item">{{item}}</span>
           {% endfor %}
         </div>
         {% endif %}
@@ -63,7 +64,8 @@ layout: default
         <div class="share-panel">
           <h5>Shared with</h5>
           {% for item in page.sharedWith %}
-            <a href="#" class="share-panel__item">{{item}}</a>
+            <!-- <a href="#" class="share-panel__item">{{item}}</a> -->
+            <span class="share-panel__item">{{item}}</span>
           {% endfor %}
         </div>
         {% endif %}
