--- a/source/_sass/_callout.scss
+++ b/source/_sass/_callout.scss
@@ -14,7 +14,7 @@
   p {
     font-size:  1.5rem;
     font-weight: 300;
-    margin-top: 40px;
+    // margin-top: 40px;
     color: rgba(white, .5);
     margin-bottom: 40px;
     line-height: 1.3;
