--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -4,7 +4,7 @@
       <a href="{{ '/introduction.html' | relative_url }} ">Introduction</a>
       <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
-      <a href="{{ '/static/files/framework.pdf' | relative_url }}">Data Responsibility Framework</a>
+      <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
       <a href="http://www.thegovlab.org/project-data-collaboratives-to-improve-childrens-lives.html">Current Projects</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
