--- a/source/_sass/_events.scss
+++ b/source/_sass/_events.scss
@@ -1,5 +1,12 @@
 .events-page {
   background-color: rgba(black, .1);
+
+  &__list-header {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin: 0;
+  }
+
   &__title {
     border-bottom: 2px $main-color solid;
     &:hover {
@@ -56,7 +63,7 @@
     background-color: white;
     cursor: pointer;
   }
-  
+
   &__name {
     font-size: 1.8rem;
     font-weight: 100;
