--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -31,6 +31,7 @@ $gray: rgba(black, 0.7);
 @import 'introduction';
 @import 'modals';
 @import 'team';
+@import 'framework';
 
 .material-icons {
   font-family: 'Material Icons';
