--- a/source/_sass/_resources.scss
+++ b/source/_sass/_resources.scss
@@ -33,6 +33,8 @@
       text-transform: uppercase;
       color: white;
       margin-right: 10px;
+      background-color: darken($main-color, 4);
+      padding: 5px;
     }
   }
 }
@@ -181,6 +183,7 @@
       display: inline-block;
       padding: 3px 8px;
       margin: 0;
+      margin-bottom: 3px;
       margin-top: -1px;
       opacity: .7;
       background-color: rgba(black, .1);
