--- a/source/_sass/_resources.scss
+++ b/source/_sass/_resources.scss
@@ -31,8 +31,8 @@
     > span {
       font-weight: 600;
       text-transform: uppercase;
-      color: white;
-      margin-right: 10px;
+      color: darken($main-color, 14);
+      margin-right: 8px;
       background-color: darken($main-color, 4);
       padding: 5px;
     }
