--- a/source/_sass/_custom-sections.scss
+++ b/source/_sass/_custom-sections.scss
@@ -2,7 +2,9 @@
 #exchanging-data {
   padding: 0;
 
-  .bg-panel__content {padding: 50px 80px;}
+  .bg-panel__content {
+    @include breakpoint($large-up) { padding: 50px 80px; }
+  }
 
   ul {padding: 0;}
   li {
@@ -16,7 +18,12 @@
 #exchanging-data {
   .bg-panel__content { background-color: rgba(white, .9); }
 
-  h3, h4 { color: rgba(black, .6); }
+  h3, h4 { 
+    color: rgba(black, .6); 
+    @include breakpoint($small-only) {
+      text-align: center;
+    }
+  }
 
   .icon-box {
     border-color: rgba(black, .3);
@@ -31,7 +38,12 @@
 
 #services {
   .checkerboard__content {
-      padding-left: 15%;
-      padding-right: 15%;
+      padding-left: 5%;
+      padding-right: 5%;  
+
+      @include breakpoint($large-up) {
+        padding-left: 15%;
+        padding-right: 15%;  
+      }
   }
 }
