--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -2,9 +2,11 @@
 ---
 
 $small-only: (max-width 40em);
+$medium-down: (max-width 64em);
+$medium-up: (min-width 64em);
 $medium: 40.063em 64em;
 $large: 64.063em 90em;
-$large-up: 64.063em;
+$large-up: (min-width 64.063em);
 
 $yellow: #e5c810;
 $main-color: $yellow;
