--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -22,7 +22,7 @@
     <script src="/scripts/list.fuzzysearch.js"></script>
   </head>
 
-  <body>
+  <body class="{{page.custom_body}}">
     {% include top-bar.html %}
 
     {{content}}
