--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -3,3 +3,4 @@
 // AUX class. Very useful. 
 // ADD TO STYLEGUIDE
 .text-align-center { text-align: center; }
+.top-bar--transparent { z-index: 100; }
