--- a/source/_sass/_case.scss
+++ b/source/_sass/_case.scss
@@ -1,72 +1,61 @@
 .case-page {
-  margin-top: -50px;
+    &__header {
+      background-size: cover;
+      background-position: center;
+      padding-bottom: 40px;
+      padding-top: 80px;
+      position: relative;
+      
+      @include breakpoint($large-up) { 
+        padding-top: 140px; 
+        height: 42vh;
+      }
 
-  &__header {
-    background-size: cover;
-    background-position: center;
-    height: 42vh;
-    position: relative;
+      h1, h2, h3 {
+        margin: 0;
 
-    &:after {
-      // content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 40vh;
-    }
-
-    // hgroup {
-    //   background-color: $yellow;
-    //   padding: 25px 0;
-    //   opacity: .9;
-    // }
-
-    h1, h2, h3 {
-      margin: 0;
-
-      span {
-        display: inline-block;
-        #span-link {
-          text-decoration: none;
+        span {
+          display: inline-block;
+          #span-link {
+            text-decoration: none;
+          }
         }
       }
-    }
 
-    h1 {
-      font-size: 3.4rem;
-      font-weight: 300;
-      margin-bottom: 20px;
-      @include breakpoint($small-only) {
-        font-size: 1.7rem;
-      }
-
-      span {
-        padding: 10px 30px;
-        background-color: rgba($yellow, .9);
-      }
-    }
-
-    h2 {
-      font-size: 1.2rem;
-      font-weight: 400;
-      color: white;
-
-      @include breakpoint($small-only) {
-        font-size: 1rem;
-      }
-
-      span {
-        margin-bottom: 5px;
-        border: 1px solid white;
-        padding: 7px 17px;
-        background-color: rgba(black, .4);
+      h1 {
+        font-size: 3.4rem;
+        font-weight: 300;
+        margin-bottom: 20px;
         @include breakpoint($small-only) {
-          background-color: rgba(black, .5);
-          padding-top: 7px;
+          font-size: 1.7rem;
+        }
+
+        span {
+          padding: 10px 30px;
+          background-color: rgba($yellow, .9);
         }
       }
-    }
+
+      h2 {
+        font-size: 1.2rem;
+        font-weight: 400;
+        color: white;
+
+        @include breakpoint($small-only) {
+          font-size: 1rem;
+        }
+
+        span {
+          margin-bottom: 5px;
+          border: 1px solid white;
+          padding: 7px 17px;
+          background-color: rgba(black, .25);
+          @include breakpoint($small-only) {
+            background-color: rgba(black, .5);
+            padding-top: 7px;
+          }
+        }
+      }
 
     &__shared {
       font-size: 2rem!important;
@@ -89,8 +78,6 @@
 
         &:hover { background-color: darken($yellow, 7); }
       }
-
-
     }
   }
 
