--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -9,7 +9,7 @@
     <div class="large-4 small-12 column">
 
       <nav class="footer__nav footer__panel">
-        <a href="{{ '/introduction.html' | relative_url }}">What is Data Collaboratives</a>
+        <a href="{{ '/introduction.html' | relative_url }}">What are Data Collaboratives</a>
         <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
         <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
         <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
@@ -32,6 +32,7 @@
         <a class="footer-logos__item footer-logos--unicef" href="https://www.unicef.org" tagret="_blank"><img src="/images/partners/unicef.png" alt="The Governance Lab"></a>
         <a class="footer-logos__item footer-logos--on" href="https://www.omidyar.com" tagret="_blank"><img src="/images/partners/on-foundation.png" alt="The Governance Lab"></a>
         <a class="footer-logos__item footer-logos--nyu" href="http://engineering.nyu.edu/tandon" tagret="_blank"><img src="/images/partners/nyu.png" alt="NYU Tandon School of Engineering - New York University"></a>
+        <a class="button button--outline" href="mailto:andrew@thegovlab.org">Collaborate with Us</a>
       </div>
     </div>
 
