--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -20,9 +20,19 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.3.0/list.min.js"></script>
     <script src="/js/modernizr.js"></script>
     <script src="/scripts/list.fuzzysearch.js"></script>
-  </head>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  <body class="{{page.custom_body}}">
+  ga('create', 'UA-40012093-10', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
+
+<body class="{{page.custom_body}}">
     {% include top-bar.html %}
 
     {{content}}
@@ -43,11 +53,11 @@
     {% if page.custom_js %}
     <script src="/js/{{ page.custom_js }}"></script>
     {% endif %}
-<!-- fullPage scripts -->
+    <!-- fullPage scripts -->
     <script src="/scripts/fullpage.scrollHorizontally.min.js"></script>
     <script src="/scripts/jquery.fullPage.js"></script>
     <script src="/scripts/scrolloverflow.min.js"></script>
     <script src="/scripts/jquery.fullpage.extensions.min.js"></script>
     <!-- <script src="/scripts/jquery.easings.min.js"></script> -->
-  </body>
+</body>
 </html>
