--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -82,6 +82,14 @@
     padding-bottom: 50px;
     color: rgba(0,0,0,0.3);
   }
+
+  &__under-video {
+    z-index: -2;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+  }
 }
 
 .webgl .top-section__backup-logo { display: none; }
