--- a/source/_sass/_custom_styles.scss
+++ b/source/_sass/_custom_styles.scss
@@ -10,18 +10,18 @@
       width: 8px;
   }
   &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px inherit; 
+      -webkit-box-shadow: inset 0 0 6px inherit;
       -webkit-border-radius: 14px;
       border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb {
       -webkit-border-radius: 10px;
       border-radius: 14px;
-      background: inherit; 
-      -webkit-box-shadow: inset 0 0 6px $gray; 
+      background: inherit;
+      -webkit-box-shadow: inset 0 0 6px $gray;
   }
   &::-webkit-scrollbar-thumb:window-inactive {
-    background: $gray; 
+    background: $gray;
   }
 }
 
@@ -34,8 +34,12 @@
     color: rgba(black, .5);
     max-width: 390px;
     display: inline-block;
-    
+
     @include breakpoint($small-only) { display: block;}
   }
 }
 
+select option {
+  background: white !important;
+  color: black !important;
+  }
