--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -1,5 +1,5 @@
 <header class="top-bar top-bar--transparent">
-    <span class="top-bar__button js-trigger-menu">menu</span>
+    <span class="top-bar__button js-trigger-menu"><i class="material-icons">menu</i></span>
     <nav class="main-menu js-target-menu main-menu--left">
       <a href="{{ '/introduction.html' | relative_url }} ">Introduction</a>
       <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
