--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -7,7 +7,7 @@
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/improving-childrens-lives.html' | relative_url }} ">Improving Children's Lives</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
-      <a href="http://www.thegovlab.org/project-data-collaboratives-to-improve-childrens-lives.html">Current Projects</a>
+      <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
       <a href="{{ '/team.html' | relative_url }}">Team</a>
     </nav>
