--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -52,7 +52,10 @@
     <script src="/js/modal.js"></script>
     <script src="/js/video.js"></script>
     {% if page.custom_js %}
-    <script src="/js/{{ page.custom_js }}"></script>
+      <script src="/js/{{ page.custom_js }}"></script>
+    {% endif %}
+    {% if page.project_js %}
+      <script src="/js/{{ page.project_js }}"></script>
     {% endif %}
     <!-- fullPage scripts -->
     <script src="/scripts/fullpage.scrollHorizontally.min.js"></script>
