--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -5,16 +5,13 @@
       <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
-      <a href="{{ '/improving-childrens-lives.html' | relative_url }} ">Improving Children's Lives</a>
+      <a href="{{ '/projects.html' | relative_url }}">Improving Children's Lives</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
       <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
       <a href="{{ '/team.html' | relative_url }}">Team</a>
     </nav>
      <a class="top-bar__logo" href="/"><img src="/images/govlab-logo-white.png" alt="The GovLab"></a>
-
-
-
 
     <!-- <span class="top-bar__button js-trigger-menu">more_vert</span>
     <nav class="main-menu js-target-menu main-menu--right">
