--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -14,7 +14,7 @@
         <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
         <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
         <a href="{{ '/events.html' | relative_url }}">Events</a>
-        <a href="{{ '/projects.html' | relative_url }}">Improving Children’s Lives through Data Collaboratives</a>
+        <a href="{{ '/projects.html' | relative_url }}">Projects</a>
         <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
         <a href="{{ '/team.html' | relative_url }}">Team</a>
       </nav>
