--- a/source/_sass/_custom_styles.scss
+++ b/source/_sass/_custom_styles.scss
@@ -43,3 +43,21 @@ select option {
   background: white !important;
   color: black !important;
   }
+
+
+.sticky {
+
+  background-color: transparentize(rgb(51,51,51), 0.1);
+  &__image {
+    width: 200px;
+  }
+  a {
+    text-decoration: none;
+    color: $main-color!important;
+    font-style: italic;
+    cursor: pointer;
+    &:hover {
+      // text-decoration: none!important;
+    }
+  }
+}
