--- a/source/_sass/_custom_styles.scss
+++ b/source/_sass/_custom_styles.scss
@@ -47,7 +47,8 @@ select option {
 
 .sticky {
 
-  background-color: transparentize(rgb(51,51,51), 0.1);
+  // background-color: transparentize(rgb(51,51,51), 0.1);
+  background-color: rgba(0,0,0,0.9);
   &__image {
     width: 200px;
   }
