--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -5,6 +5,7 @@
       <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
+      <a href="{{ '/network.html' | relative_url }}">Data Collaboratives Research Network</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
       <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
