--- a/source/_sass/_custom_styles.scss
+++ b/source/_sass/_custom_styles.scss
@@ -7,18 +7,18 @@
 .main-menu {
   overflow-x: auto;
   &::-webkit-scrollbar {
-      width: 8px;
+    width: 8px;
   }
   &::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px inherit;
-      -webkit-border-radius: 14px;
-      border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px inherit;
+    -webkit-border-radius: 14px;
+    border-radius: 10px;
   }
   &::-webkit-scrollbar-thumb {
-      -webkit-border-radius: 10px;
-      border-radius: 14px;
-      background: inherit;
-      -webkit-box-shadow: inset 0 0 6px $gray;
+    -webkit-border-radius: 10px;
+    border-radius: 14px;
+    background: inherit;
+    -webkit-box-shadow: inset 0 0 6px $gray;
   }
   &::-webkit-scrollbar-thumb:window-inactive {
     background: $gray;
@@ -42,7 +42,7 @@
 select option {
   background: white !important;
   color: black !important;
-  }
+}
 
 
 .sticky {
@@ -59,6 +59,40 @@ select option {
     cursor: pointer;
     &:hover {
       // text-decoration: none!important;
+    }
+  }
+}
+
+.error-messages {
+  color: rgb(244, 66, 66);
+}
+
+.field-required {
+  &::after {
+    content: "*";
+    color: rgb(244, 66, 66);
+  }
+}
+
+.join-button {
+  margin: 0!important;
+  background-color: $main-color;
+  position: absolute;
+  left: -180px;
+  &:hover {
+    left: 0px;
+    background-color: lighten($main-color, 5);
+  }
+}
+
+@media (max-width: 1090px) {
+  .join-button {
+    margin: 0!important;
+    background-color: $main-color;
+    left: 0px;
+    position: relative;
+    &:hover {
+      background-color: lighten($main-color, 5);
     }
   }
 }
