research network page tweaks

--- a/source/_sass/_custom_styles.scss
+++ b/source/_sass/_custom_styles.scss
@@ -75,7 +75,7 @@ select option {
 }
 
 .join-button {
-  margin: 0!important;
+  margin: 25px 0 0 0 !important;
   background-color: $main-color;
   position: absolute;
   left: -180px;
