--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -7,6 +7,7 @@
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/researchnetwork.html' | relative_url }}">Data Collaboratives Research Network</a>
       <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
+      <a href="{{ '/dcfb-report.html' | relative_url }}">DCFB Report</a>
       <a href="{{ '/team.html' | relative_url }}">Team</a>
       <a href="{{ '/events.html' | relative_url }}">Events</a>
       <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
