--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -91,16 +91,26 @@
     margin: -50px 0 0 0;
     padding-bottom: 10px;
     color: rgba(0,0,0,0.7);
+    @include breakpoint($small-only) {
+      font-size: 1.5rem;
+      padding-bottom: 20px;
+    }
   }
 
   &__author {
     margin-top: 0;
+    margin-bottom: 50px;
+    @include breakpoint($small-only) {
+    }
   }
 
   &__sub-header {
     margin: 0;
     padding-bottom: 50px;
     color: rgba(0,0,0,0.3);
+    @include breakpoint($small-only) {
+      padding-bottom: 20px;
+    }
   }
 
   &__dcfb-header {
@@ -156,7 +166,11 @@
     color: rgba(black, 0.8);
     background-color: $main-color;
     position: relative;
-    top: -47.5px;
+    top: -57.5px;
+    margin: 10px;
+    @include breakpoint($small-only) {
+      top: -47.5px;
+    }
     &:hover {
       color: rgba(black, 0.8);
       background-color: darken($main-color, 5);
