add back menu and sticky

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -13,7 +13,7 @@
         <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
         <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
         <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
-        <!-- <a href="{{ '/social-media.html' | relative_url }}">Social Media Data for Good</a> -->
+        <a href="{{ '/social-media.html' | relative_url }}">Social Media Data for Good</a>
         <a href="{{ '/events.html' | relative_url }}">Events</a>
         <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
         <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
