--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -6,6 +6,7 @@
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/social-media.html' | relative_url }}">Social Media Data<br>for Good</a>
+      <a href="https://datastewards.net/" target="_blank">Data Stewards</a>
       <a href="{{ '/researchnetwork.html' | relative_url }}">Data Collaboratives Research Network</a>
       <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
       <a href="{{ '/team.html' | relative_url }}">Team</a>
