--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -4,14 +4,14 @@
       <a href="{{ '/introduction.html' | relative_url }} ">Introduction</a>
       <a href="{{ '/explorer.html' | relative_url }}">Data Collaboratives Explorer</a>
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
+      <a href="{{ '/resources.html' | relative_url }}">Resources</a>
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
       <a href="{{ '/social-media.html' | relative_url }}">Social Media Data<br>for Good</a>
       <a href="https://datastewards.net/" target="_blank">Data Stewards</a>
-      <a href="{{ '/researchnetwork.html' | relative_url }}">Data Collaboratives Research Network</a>
+      <!-- <a href="{{ '/researchnetwork.html' | relative_url }}">Data Collaboratives Research Network</a> -->
       <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
       <a href="{{ '/team.html' | relative_url }}">Team</a>
-      <a href="{{ '/events.html' | relative_url }}">Events</a>
-      <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
+      <!-- <a href="{{ '/events.html' | relative_url }}">Events</a> -->
     </nav>
      <a class="top-bar__logo" href="/"><img src="/images/govlab-logo-white.png" alt="The GovLab"></a>
 
