nexisting-practices-report

--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -29,6 +29,11 @@
     background-size: cover;
     padding-bottom: 0;
   }
+  &--ep-bg {
+    background-image: url("/images/bgs/ep.jpg");
+    background-size: cover;
+    padding-bottom: 0;
+  }
   &--bg {
     background-image: url("/images/video/long-img.png");
     // background-position: center;
