--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -14,6 +14,7 @@
         <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
         <a href="{{ '/resources.html' | relative_url }}">Resources</a>
         <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
+        <a href="{{ '/existing-practices.html' | relative_url }}">Typology of Existing Practices</a>
         <a href="https://datastewards.net/" target="_blank">Data Stewards</a>
         <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
         <a href="{{ '/team.html' | relative_url }}">Team</a>
@@ -21,7 +22,7 @@
     </div>
     <div class="large-4 small-12  column footer__panel--about">
       <div class="footer__text footer__panel footer__panel--about">
-        <p>DataCollaboratives.org is a resource on creating public value by exchanging data. In sync with the mission of the <a href="http://www.thegovlab.org/">GovLab</a>, the site seeks to provide insight on how responsible exchange of corporate data can improve people’s lives. It results from different partnerships with UNICEF and Omidyar Network.</p>
+        <p>DataCollaboratives.org is a resource on creating public value by exchanging data. In sync with the mission of The <a href="http://www.thegovlab.org/">GovLab</a>, the site seeks to provide insight on how responsible exchange of corporate data can improve people’s lives. It results from different partnerships with UNICEF and Omidyar Network.</p>
       </div>
     </div>
 
