--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -6,6 +6,7 @@
       <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
       <a href="{{ '/resources.html' | relative_url }}">Resources</a>
       <a href="{{ '/framework.html' | relative_url }}">Data Responsibility Framework</a>
+      <a href="{{ '/existing-practices.html' | relative_url }}">Typology of Existing Practices</a>
       <a href="https://datastewards.net/" target="_blank">Data Stewards</a>
       <!-- <a href="{{ '/researchnetwork.html' | relative_url }}">Data Collaboratives Research Network</a> -->
       <a href="{{ '/projects.html' | relative_url }}">Current Projects</a>
