data-shared-update

--- a/source/_layouts/case_template.html
+++ b/source/_layouts/case_template.html
@@ -50,11 +50,11 @@ layout: default
   <div class="page-section case-page--info">
     <div class="row large-unstack">
       <div class="column large-8">
-        {% if page.purpose %}
+        {% if page.whatDataShared %}
           <h4>DESCRIPTION</h4>
           <p>{{page.whatDataShared}}</p>
-          <p>{{ page.howDataShared }}</p>
-          <p>{{ page.purpose }}</p>
+          <!-- <p>{{ page.howDataShared }}</p>
+          <p>{{ page.purpose }}</p> -->
         {% endif %}
       </div>
       <div class="column large-4">
